Update demo site link in competitive landscape slide

--- a/slides/04-competitive-landscape.html
+++ b/slides/04-competitive-landscape.html
@@ -148,7 +148,7 @@
             
             <!-- 데모 사이트 링크 -->
             <div class="text-center mt-8">
-                <a href="https://esg-platform-delta.vercel.app/dashboard" target="_blank" 
+                <a href="https://esgwatchdog.site/dashboard" target="_blank" 
                    class="demo-link-button">
                     <i class="fas fa-external-link-alt" style="margin-right: 8px;"></i>
                     실시간 데모 대시보드 체험하기
