--- a/slides/03-market-opportunity.html
+++ b/slides/03-market-opportunity.html
@@ -350,9 +350,12 @@
     <script>
         // 키보드 네비게이션
         document.addEventListener('keydown', function(event) {
-            if (event.key === 'ArrowLeft') {
+            if (event.key === 'ArrowLeft' || event.key === 'Tab') {
                 window.location.href = '02-team-and-roles.html';
-            } else if (event.key === 'ArrowRight') {
+                if (event.key === 'Tab') {
+                    event.preventDefault();
+                }
+            } else if (event.key === 'ArrowRight' || event.key === 'Enter') {
                 window.location.href = '04-competitive-landscape.html';
             }
         });
