--- a/slides/07-learnings-and-limitations.html
+++ b/slides/07-learnings-and-limitations.html
@@ -302,9 +302,12 @@
 
         // 키보드 네비게이션
         document.addEventListener('keydown', function(event) {
-            if (event.key === 'ArrowLeft') {
+            if (event.key === 'ArrowLeft' || event.key === 'Tab') {
                 window.location.href = '06-proven-execution.html';
-            } else if (event.key === 'ArrowRight') {
+                if (event.key === 'Tab') {
+                    event.preventDefault();
+                }
+            } else if (event.key === 'ArrowRight' || event.key === 'Enter') {
                 window.location.href = '08-future-vision.html';
             }
         });
